--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="lib" path="/alljoyn_java/bin/jar/alljoyn.jar" sourcepath="/alljoyn_java/src"/>
+	<classpathentry kind="lib" path="libs"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
